spacing issues fixed in the event details page

--- a/app/globals.css
+++ b/app/globals.css
@@ -117,7 +117,7 @@
     }
 
     main {
-        @apply mx-auto container flex flex-col sm:px-10 px-5 py-10;
+        @apply mx-auto container flex flex-col sm:px-10 px-5 py-5 md:py-10;
     }
 
     h1 {
@@ -201,11 +201,11 @@
 
     #event {
         .header {
-            @apply flex w-2/3 flex-col items-start gap-4 max-lg:w-full mb-10;
+            @apply flex w-2/3 flex-col items-start gap-4 max-lg:w-full md:mb-10;
         }
 
         .details {
-            @apply flex w-full flex-col lg:flex-row gap-12 items-start mt-12 max-lg:items-center;
+            @apply flex w-full flex-col lg:flex-row gap-12 items-start md:mt-12 max-lg:items-center;
 
             .content {
                 @apply flex flex-[2] flex-col gap-8 max-lg:w-full;
